# CyberScanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: build.yml  cmake-multi-platform.yml
